--- a/src/views/about.hbs
+++ b/src/views/about.hbs
@@ -1,1 +1,13 @@
-<h1> About </h1>
+<div class="card">
+    <div class="card-body">
+        <h1>About</h1>
+        <p>
+            Lorem ipsum dolor sit amet consectetur,
+            adipisicing elit. Nulla tempora sapiente doloremque,
+            earum dolorem maiores eveniet eaque natus? Fugit
+            obcaecati minima maiores excepturi voluptate dolore
+            dicta accusamus unde. Fugiat, id. Doloremque ipsam
+            incidunt excepturi voluptatibus sint deleniti eaque id. Libero!
+        </p>
+    </div>
+</div>
