--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,1 +1,8 @@
-<h1> Index </h1>
+<div class="jumbotron mt-4">
+    <h1 class="display-4"> Aplicacion de notas Nodejs and Mongodb</h1>
+    <p class="lead"> lorem ipsum, dolor ipsum, amet ipsum.</p>
+    <hr class="my-4">
+    <p> lorem ipsum, dolor ipsum, amet lorem ipsum
+    aca se puede poner lo que nosotros queramos.</p>
+    <a href="http://en.wikipedia.org" class="btn btn-primary btn-lg"> wikipedia</a>
+</div>
