--- a/src/views/notes/all-notes.hbs
+++ b/src/views/notes/all-notes.hbs
@@ -3,11 +3,24 @@
     <div class="col-md-3">
         <div class="card">
             <div class="card-body">
-                <h4 class="card-title">
-                    {{title}}
+                <h4 class="card-title d-flex justify-content-between align-items-center">
+                    {{title}} <a href="/notes/edit/{{_id}}"><i class="fas fa-edit"></i></a>
                 </h4>
                 <p>{{description}}</p>
+                <form action="/notes/delete/{{_id}}?_method=DELETE" method="post">
+                    <input type="hidden" name="_method" value="DELETE">
+                    <button class="btn btn-danger btn-block btn-sm" type="submit">
+                        Borrar
+                    </button>
+                </form>
             </div>
+        </div>
+    </div>
+    {{else}}
+    <div class="card mx-auto">
+        <div class="card-body">
+            <p class="lead"> No se han creado notas aun</p>
+            <a href="/notes/add" class="btn btn-success btn-block"> Crear Nota</a>
         </div>
     </div>
     {{/each}}
