--- a/src/views/users/signup.hbs
+++ b/src/views/users/signup.hbs
@@ -7,16 +7,20 @@
             <div class="card-body">
                 <form action="/users/signup" method="POST">
                     <div class="form-group">
-                        <input type="text" class="form-control" name="name" placeholder="Nombre">
+                        <input type="text" class="form-control" name="name" placeholder="Nombre"
+                        value="{{name}}">
                     </div>
                     <div class="form-group">
-                        <input type="email" class="form-control" name="email" placeholder="Correo">
+                        <input type="email" class="form-control" name="email" placeholder="Correo"
+                        value="{{email}}">
                     </div>
                     <div class="form-group">
-                        <input type="password" class="form-control" name="password" placeholder="Clave">
+                        <input type="password" class="form-control" name="password" placeholder="Clave"
+                        value="{{password}}">
                     </div>
                     <div class="form-group">
-                        <input type="password" class="form-control" name="confirm_password" placeholder="Confirmación Clave">
+                        <input type="password" class="form-control" name="confirm_password" placeholder="Confirmación Clave"
+                        value="{{confirm_password}}">
                     </div>
                     <div class="form-group">
                         <button type="submit" class="btn btn-primary btn-block">
