--- a/src/views/users/signin.hbs
+++ b/src/views/users/signin.hbs
@@ -1,1 +1,26 @@
-<h1> INGRESAR </h1>
+<div class="row">
+    <div class="col-md-4 mx-auto">
+        <div class="card mt-4 tex-center">
+            <div class="card-header mx-auto d-block">
+                <h1>Bienvenido</h1>
+            </div>
+            <img src="/recursos/reintegra_logo1_0.png" class="rounded-circle mx-auto d-block m-4 logo" alt="Logo">
+            <div class="card-body">
+                <form action="/users/signin" method="POST">
+                    <div class="form-goup p-2">
+                        <input type="email" class="form-control" name="email" placeholder="Correo" autofocus>
+                    </div>
+                    <div class="form-group p-2">
+                        <input type="password" name="password" class="form-control" placeholder="Clave">
+                    </div>
+                    <div class="form-goup p-2">
+                        <button type="submit" class="btn btn-primary btn-block">
+                            Ingresar
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+</div>
