--- a/src/views/notes/all-notes.hbs
+++ b/src/views/notes/all-notes.hbs
@@ -19,6 +19,7 @@
     {{else}}
     <div class="card mx-auto">
         <div class="card-body">
+            <h1> Bienvenido {{user.name}}</h1>
             <p class="lead"> No se han creado notas aun</p>
             <a href="/notes/add" class="btn btn-success btn-block"> Crear Nota</a>
         </div>
