--- a/src/views/notes/edit-note.hbs
+++ b/src/views/notes/edit-note.hbs
@@ -6,13 +6,13 @@
         <div class="card-body">
             <form action="/notes/edit-note/{{note._id}}?_method=PUT" method="POST">
                 <input type="hidden" name="method" value="PUT">
-                <div class="form-group">
+                <div class="form-group p-2">
                     <input type="text" name="title" class="form-control" placeholder="Title" value="{{note.title}}">
                 </div>
-                <div class="form-group">
+                <div class="form-group p-2">
                     <textarea name="description" class="form-control">{{note.description}}</textarea>
                 </div>
-                <div class="form-group">
+                <div class="form-group p-2">
                     <button class="btn btn-primary btn-block" type="submit">
                         Guardar
                     </button>
