--- a/src/views/notes/new-note.hbs
+++ b/src/views/notes/new-note.hbs
@@ -6,13 +6,13 @@
         <div class="card-body">
             <h3>
                 <form action="/notes/new-note" method='POST'>
-                    <div class="form-group">
+                    <div class="form-group p-2">
                         <input type="text" name="title" class="form-control" placeholder="Titulo" autofocus>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group p-2">
                         <textarea class="form-control" name="description" placeholder="Descripcion"></textarea>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group p-2">
                         <button class="btn btn-primary btn-block" type="submit">
                             Guardar
                         </button>
