--- a/src/views/users/signup.hbs
+++ b/src/views/users/signup.hbs
@@ -1,28 +1,28 @@
 <div class="row">
     <div class="col-md-4 mx-auto">
         <div class="card">
-            <div class="card-header">
+            <div class="card-header mx-auto d-block">
                 Registro de Cuenta
             </div>
             <div class="card-body">
                 <form action="/users/signup" method="POST">
-                    <div class="form-group">
+                    <div class="form-group p-2">
                         <input type="text" class="form-control" name="name" placeholder="Nombre"
                         value="{{name}}">
                     </div>
-                    <div class="form-group">
+                    <div class="form-group p-2">
                         <input type="email" class="form-control" name="email" placeholder="Correo"
                         value="{{email}}">
                     </div>
-                    <div class="form-group">
+                    <div class="form-group p-2">
                         <input type="password" class="form-control" name="password" placeholder="Clave"
                         value="{{password}}">
                     </div>
-                    <div class="form-group">
+                    <div class="form-group p-2">
                         <input type="password" class="form-control" name="confirm_password" placeholder="Confirmación Clave"
                         value="{{confirm_password}}">
                     </div>
-                    <div class="form-group">
+                    <div class="form-group p-2">
                         <button type="submit" class="btn btn-primary btn-block">
                             Registrar
                         </button>
