--- a/src/views/about.hbs
+++ b/src/views/about.hbs
@@ -1,13 +1,50 @@
-<div class="card">
-    <div class="card-body">
-        <h1>About</h1>
-        <p>
-            Lorem ipsum dolor sit amet consectetur,
-            adipisicing elit. Nulla tempora sapiente doloremque,
-            earum dolorem maiores eveniet eaque natus? Fugit
-            obcaecati minima maiores excepturi voluptate dolore
-            dicta accusamus unde. Fugiat, id. Doloremque ipsam
-            incidunt excepturi voluptatibus sint deleniti eaque id. Libero!
-        </p>
+<div class="container py-4">
+
+
+    <div class="p-5 mb-4 bg-light rounded-3">
+        <div class="container-fluid py-5">
+            <div class="row">
+                <div class="col-lg-8">
+                    <h1 class="display-5 fw-bold" style="text-transform: uppercase; margin-top: 2px;">¿Quienes somos?</h1>
+                    <p>
+                        Somos una institución prestadora de servicios de salud, creada en el año 2006, cuyo principal
+                        objetivo es ofrecer,
+                        a través de un grupo de profesionales altamente calificados en fisioterapia, variedad de
+                        terapias físicas en Cali como la
+                        terapia ocupacional y la hidroterapia, así como un servicio basado en la excelente atención y
+                        calidad asistencial y administrativa. Nuestro referente más importante siempre serán nuestros
+                        usuarios,
+                        pues nos enfocamos a brindar siempre lo mejor de las terapias físicas en Cali.
+                    </p>
+                </div>
+                <div class="col-lg-4">
+                    <img src="/recursos/imagenes/reintegra_logo1_0.png" class="rounded-circle mx-auto d-block m-4 logo"
+                    alt="Logo">
+                </div>
+
+            </div>
+        </div>
+
     </div>
+
+    <div class="row align-items-md-stretch">
+        <div class="col-md-6">
+            <div class="h-100 p-5 text-dark bg-light rounded-3">
+                <h2>Visión</h2>
+                <p>FISIOTERAPIA CENTRO ESPECIALIZADO EU. se proyecta para el año 2022 ser la mejor alternativa como
+                    servicio integral de Rehabilitación para el sector de la salud en la ciudad de Santiago de Cali.</p>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="h-100 p-5 bg-light border rounded-3">
+                <h2>Misión</h2>
+                <p>Brindar un servicio integral de Rehabilitación, fundamentado en un excelente equipo de profesionales
+                    con vocación de servicio dispuestos a contribuir al bienestar de los usuarios.</p>
+            </div>
+        </div>
+    </div>
+
+    <footer class="pt-3 mt-4 text-muted border-top">
+        © 2021
+    </footer>
 </div>
