--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,8 +1,59 @@
-<div class="jumbotron mt-4">
-    <h1 class="display-4"> Aplicacion de notas Nodejs and Mongodb</h1>
-    <p class="lead"> lorem ipsum, dolor ipsum, amet ipsum.</p>
-    <hr class="my-4">
-    <p> lorem ipsum, dolor ipsum, amet lorem ipsum
-    aca se puede poner lo que nosotros queramos.</p>
-    <a href="http://en.wikipedia.org" class="btn btn-primary btn-lg"> wikipedia</a>
+<div class="card">
+    <div class="card-body">
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="/recursos/imagenes/physiotherapy-center.jpg" class="d-block w-100 img_c">
+                    <div class="carousel-caption d-none d-md-block">
+                        <div class="card opacidad">
+                            <div class="card-body ">
+                                <h5>First slide label</h5>
+                                <p>Some representative placeholder content for the first slide.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item ">
+                    <img src="/recursos/imagenes/hands-g5a1996f63_1920.jpg" class="d-block w-100 img_c">
+                    <div class="carousel-caption d-none d-md-block">
+                        <div class="card opacidad">
+                            <div class="card-body ">
+                                <h5>First slide label</h5>
+                                <p>Some representative placeholder content for the first slide.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="/recursos/imagenes/woman.jpg" class="d-block w-100 img_c">
+                    <div class="carousel-caption d-none d-md-block">
+                        <div class="card opacidad">
+                            <div class="card-body ">
+                                <h5>First slide label</h5>
+                                <p>Some representative placeholder content for the first slide.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </div>
 </div>
