--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -14,7 +14,7 @@
                     <a class="nav-link" href="/about"> Nosotros </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"> Contacto </a>
+                    <a class="nav-link" href="/contacto"> Contacto </a>
                 </li>
             </ul>
             <ul class="navbar-nav ml-auto">
