--- a/src/views/notes/all-notes.hbs
+++ b/src/views/notes/all-notes.hbs
@@ -13,6 +13,8 @@
                         Borrar
                     </button>
                 </form>
+                <br>
+                <p>{{date}}</p>
             </div>
         </div>
     </div>
@@ -20,7 +22,7 @@
     <div class="card mx-auto">
         <div class="card-body">
             <h1> Bienvenido {{user.name}}</h1>
-            <p class="lead"> No se han creado notas aun</p>
+            <p class="lead"> No tiene Pacientes</p>
             <a href="/notes/add" class="btn btn-success btn-block"> Crear Nota</a>
         </div>
     </div>
