--- a/src/views/users/signin.hbs
+++ b/src/views/users/signin.hbs
@@ -4,7 +4,7 @@
             <div class="card-header mx-auto d-block">
                 <h1>Bienvenido</h1>
             </div>
-            <img src="/recursos/reintegra_logo1_0.png" class="rounded-circle mx-auto d-block m-4 logo" alt="Logo">
+            <img src="/recursos/imagenes/reintegra_logo1_0.png" class="rounded-circle mx-auto d-block m-4 logo" alt="Logo">
             <div class="card-body">
                 <form action="/users/signin" method="POST">
                     <div class="form-goup p-2">
@@ -13,7 +13,7 @@
                     <div class="form-group p-2">
                         <input type="password" name="password" class="form-control" placeholder="Clave">
                     </div>
-                    <div class="form-goup p-2">
+                    <div class="form-goup p-2 center">
                         <button type="submit" class="btn btn-primary btn-block">
                             Ingresar
                         </button>
