--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -15,8 +15,8 @@
                     <div class="carousel-caption d-none d-md-block">
                         <div class="card opacidad">
                             <div class="card-body ">
-                                <h5>First slide label</h5>
-                                <p>Some representative placeholder content for the first slide.</p>
+                                <h5>Terapia relajante</h5>
+                                <p>Sesiones de relajacion para deportistas.</p>
                             </div>
                         </div>
                     </div>
@@ -26,8 +26,8 @@
                     <div class="carousel-caption d-none d-md-block">
                         <div class="card opacidad">
                             <div class="card-body ">
-                                <h5>First slide label</h5>
-                                <p>Some representative placeholder content for the first slide.</p>
+                                <h5>Recuperación</h5>
+                                <p>Masajes recuperativos.</p>
                             </div>
                         </div>
                     </div>
@@ -37,8 +37,8 @@
                     <div class="carousel-caption d-none d-md-block">
                         <div class="card opacidad">
                             <div class="card-body ">
-                                <h5>First slide label</h5>
-                                <p>Some representative placeholder content for the first slide.</p>
+                                <h5>Fisioterapia</h5>
+                                <p>Cuidando de ti.</p>
                             </div>
                         </div>
                     </div>
