--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Note app</title>
+    <title>Re-integra</title>
+    <link rel="shortcut icon" href="/recursos/imagenes/reintegra_logo1_0.png" />
     <!-- bootstrap -->
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
