--- a/src/views/notes/edit-note.hbs
+++ b/src/views/notes/edit-note.hbs
@@ -1,13 +1,13 @@
 <div class="col-md-4-mx-auto">
     <div class="card">
         <div class="card-header">
-            <h3>Edit Note</h3>
+            <h3>Editar Paciente</h3>
         </div>
         <div class="card-body">
             <form action="/notes/edit-note/{{note._id}}?_method=PUT" method="POST">
                 <input type="hidden" name="method" value="PUT">
                 <div class="form-group p-2">
-                    <input type="text" name="title" class="form-control" placeholder="Title" value="{{note.title}}">
+                    <input type="text" name="title" class="form-control" placeholder="Nombre Paciente" value="{{note.title}}">
                 </div>
                 <div class="form-group p-2">
                     <textarea name="description" class="form-control">{{note.description}}</textarea>
