--- a/src/views/notes/new-note.hbs
+++ b/src/views/notes/new-note.hbs
@@ -1,16 +1,16 @@
 <div class="col-md-4-auto">
     <div class="card">
         <div class="card-header">
-            <h3>New Note</h3>
+            <h3>Nuevo Paciente</h3>
         </div>
         <div class="card-body">
             <h3>
                 <form action="/notes/new-note" method='POST'>
                     <div class="form-group p-2">
-                        <input type="text" name="title" class="form-control" placeholder="Titulo" autofocus>
+                        <input type="text" name="title" class="form-control" placeholder="Nombre Paciente" autofocus>
                     </div>
                     <div class="form-group p-2">
-                        <textarea class="form-control" name="description" placeholder="Descripcion"></textarea>
+                        <textarea class="form-control" name="description" placeholder="Descripción"></textarea>
                     </div>
                     <div class="form-group p-2">
                         <button class="btn btn-primary btn-block" type="submit">
